<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddFragment">

    <TextView
        android:id="@+id/addDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/add_transaction"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/addDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addDescriptionText"
        android:layout_centerHorizontal="true"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/add_description"
        android:paddingLeft="20dp"
        android:textAllCaps="false"
        android:textSize="13dp" />


    <EditText
        android:id="@+id/nominal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/addDescriptionEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/nominal"
        android:paddingLeft="20dp"
        android:textAllCaps="false"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/datePicker"
        android:drawableRight="@drawable/baseline_date_range_24"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/nominal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/date"
        android:paddingLeft="20dp"
        android:textAllCaps="false"
        android:textSize="13dp" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/incomeRadioButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/purple_700"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/income_add"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/expendeRadioButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/purple_700"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/expense_add"
            android:textSize="14sp">

        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:width="200dp"
        android:height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/save_add"
        android:textColor="@color/white" />

</RelativeLayout>