<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/createAccount_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccount_register"
        android:layout_centerHorizontal="true"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/email_register"
        android:paddingLeft="20dp"
        android:textAllCaps="false"
        android:textSize="13dp" />


    <EditText
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/email_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textAllCaps="false"
        android:textSize="13dp" />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:width="200dp"
        android:height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/signUp_register"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/alreadyhaveaccount"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_marginStart="215dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinssemibold"
        android:onClick="onClick"
        android:paddingStart="70dp"
        android:text="@string/login_link"
        android:textColor="@color/green"
        android:textSize="15sp" />


</RelativeLayout>