<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="345dp"
        android:layout_height="195dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/enter_phoneNumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/email_changePassword"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/enterPhoneNumber"
        android:layout_below="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:height="50dp"
        android:width="320dp"
        android:text="@string/enter_your_email"
        android:background="@drawable/green_border"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="13dp"
        android:textAllCaps="false"
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/backToSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/back_to_sign"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <Button
        android:id="@+id/change_btn"
        android:layout_below="@+id/enterPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:width="230dp"
        android:text="@string/send_button"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsbold"
        android:textSize="13dp"
        android:textAlignment="center"/>

</RelativeLayout>