<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enterYourEmailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordText"
        android:layout_centerHorizontal="true"
        android:width="320dp"
        android:height="50dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/email_changePassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAllCaps="false"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/backToSignLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterYourEmailBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/back_to_sign"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sendEmailButtonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backToSignLink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:width="200dp"
        android:height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/send_button"
        android:textColor="@color/white" />


</RelativeLayout>