<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="345dp"
        android:layout_height="195dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/change_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/new_password_btn"
        android:layout_below="@+id/change_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:height="50dp"
        android:width="320dp"
        android:text="@string/new_password"
        android:background="@drawable/green_border"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="13dp"
        android:textAllCaps="false"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/confirmNewPassword_btn"
        android:layout_below="@+id/new_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:height="50dp"
        android:width="320dp"
        android:text="@string/confirm_new_password"
        android:background="@drawable/green_border"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="13dp"
        android:textAllCaps="false"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/change_btn"
        android:layout_below="@+id/confirmNewPassword_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:width="230dp"
        android:text="@string/change_password_btn"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppinsbold"
        android:textSize="13dp"
        android:textAlignment="center"/>

</RelativeLayout>